@@ -102,7 +102,10 @@
       www/vicidial/AST_agent_performance_detail.php,
       www/vicidial/non_agent_api.php: Added call_dispo_report function.
   * Add upstream Rev. 2907:
-    - agi/agi-VDAD_ALL_inbound.agi: Bug fix for recent feature
+    - agi/agi-VDAD_ALL_inbound.agi: Bug fix for recent feature.
+  * Add upstream Rev. 2908:
+    - www/agc/vicidial.php: Added flag for WebRTC webphone compatibility
+        in iframe.
 
 2.25.23 stable
   [Jörg Frings-Fürst]
